<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/daysLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="2dp"
    tools:context="org.duckdns.pynetti.forecast.forecastview.ForecastView">


    <org.duckdns.pynetti.forecast.forecastview.ForecastDayItemView
        android:id="@+id/todayForecastView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#ccc"
        app:dateString="@string/today" />

    <org.duckdns.pynetti.forecast.forecastview.ForecastDayItemView
        android:id="@+id/tomorrowForecastView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#ccc"
        app:dateString="@string/tomorrow" />

    <org.duckdns.pynetti.forecast.forecastview.ForecastDayItemView
        android:id="@+id/overmorrowForecastView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#ccc"
        app:dateString="@string/overmorrow" />

</LinearLayout>
